<resources>
    <string name="app_name">AplikasiWisataRohul</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="penginapan">Penginapan</string>
    <string name="travel">Travel</string>
    <string name="event">Event</string>
    <string name="masjid">Masjid</string>
    <string name="atm">ATM</string>
    <string name="spbu">SPBU</string>
    <string name="berita">Berita</string>
    <string name="beranda">Beranda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori_wisata">Kategori Wisata</string>
    <string name="wisata_sejarah">Wisata Sejarah</string>
    <string name="wisata_kuliner">Wisata Kuliner</string>
    <string name="wisata_buatan">Wisata Buatan</string>
    <string name="wisata_alam">Wisata Alam</string>
    <string name="wisata_religi">Wisata Religi</string>
    <string name="wisata_budaya">Wisata Budaya</string>
    <string name="peta_wisata">Peta Wisata</string>
    <string name="galeri">Galeri</string>
    <string name="wisata_rokan_hulu">Wisata Rokan Hulu</string>
    <string name="title_activity_maps">Map</string>
</resources>