<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/blue_200">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/images" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:subtitle="Ayo berwisata di Rokan Hulu"
                app:subtitleTextAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                app:subtitleTextColor="@color/white"
                app:title="Wisata Rokan Hulu"
                app:titleTextColor="@color/white" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_middle"
            android:layout_marginTop="-60dp"
            android:layout_marginRight="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:visibility="visible"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/kategori_wisata"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fb_wisata_sejarah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:tint="@android:color/white"
                            app:backgroundTint="@color/light_green_500"
                            app:elevation="0dp"
                            app:fabSize="mini"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_sejarah" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/wisata_sejarah"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fb_wisata_kuliner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:tint="@android:color/white"
                            app:backgroundTint="@color/yellow_600"
                            app:elevation="0dp"
                            app:fabSize="mini"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_kuliner" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/wisata_kuliner"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fb_wisata_buatan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:tint="@android:color/white"
                            app:backgroundTint="@color/purple_400"
                            app:elevation="0dp"
                            app:fabSize="mini"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_buatan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/wisata_buatan"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_mlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fb_wisata_alam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:tint="@android:color/white"
                            app:backgroundTint="@color/indigo_300"
                            app:elevation="0dp"
                            app:fabSize="mini"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_alam" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/wisata_alam"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fb_wisata_religi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:tint="@android:color/white"
                            app:backgroundTint="@color/green_500"
                            app:elevation="0dp"
                            app:fabSize="mini"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_religi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/wisata_religi"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fb_wisata_budaya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:tint="@android:color/white"
                            app:backgroundTint="@color/light_green_400"
                            app:elevation="0dp"
                            app:fabSize="mini"
                            app:rippleColor="@android:color/white"
                            app:srcCompat="@drawable/ic_budaya" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/wisata_budaya"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_mlarge" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-36dp"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="35dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/galeri"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/vp_galeri"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/slider_dots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peta_wisata"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_maps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Perbesar Peta"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/blue_500"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>